; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_hz_8t_and_aver_dst_4x4_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_hz_8t_and_aver_dst_4x4_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mc_filt_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @common_hz_8t_and_aver_dst_4x4_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_hz_8t_and_aver_dst_4x4_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %32 = load i32*, i32** @mc_filt_mask_arr, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 16
  %34 = call i64 @LD_UB(i32* %33)
  store i64 %34, i64* %25, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 -3
  store i32* %36, i32** %6, align 8
  %37 = load i32*, i32** %10, align 8
  %38 = call i32 @LD_SH(i32* %37)
  store i32 %38, i32* %29, align 4
  %39 = load i32, i32* %29, align 4
  %40 = load i32, i32* %19, align 4
  %41 = load i32, i32* %20, align 4
  %42 = load i32, i32* %21, align 4
  %43 = load i32, i32* %22, align 4
  %44 = call i32 @SPLATI_H4_SB(i32 %39, i32 0, i32 1, i32 2, i32 3, i32 %40, i32 %41, i32 %42, i32 %43)
  %45 = load i64, i64* %25, align 8
  %46 = add nsw i64 %45, 2
  store i64 %46, i64* %26, align 8
  %47 = load i64, i64* %25, align 8
  %48 = add nsw i64 %47, 4
  store i64 %48, i64* %27, align 8
  %49 = load i64, i64* %25, align 8
  %50 = add nsw i64 %49, 6
  store i64 %50, i64* %28, align 8
  %51 = load i32*, i32** %6, align 8
  %52 = load i32, i32* %7, align 4
  %53 = load i32, i32* %15, align 4
  %54 = load i32, i32* %16, align 4
  %55 = load i32, i32* %17, align 4
  %56 = load i32, i32* %18, align 4
  %57 = call i32 @LD_SB4(i32* %51, i32 %52, i32 %53, i32 %54, i32 %55, i32 %56)
  %58 = load i32, i32* %15, align 4
  %59 = load i32, i32* %16, align 4
  %60 = load i32, i32* %17, align 4
  %61 = load i32, i32* %18, align 4
  %62 = call i32 @XORI_B4_128_SB(i32 %58, i32 %59, i32 %60, i32 %61)
  %63 = load i32, i32* %15, align 4
  %64 = load i32, i32* %16, align 4
  %65 = load i32, i32* %17, align 4
  %66 = load i32, i32* %18, align 4
  %67 = load i64, i64* %25, align 8
  %68 = load i64, i64* %26, align 8
  %69 = load i64, i64* %27, align 8
  %70 = load i64, i64* %28, align 8
  %71 = load i32, i32* %19, align 4
  %72 = load i32, i32* %20, align 4
  %73 = load i32, i32* %21, align 4
  %74 = load i32, i32* %22, align 4
  %75 = load i32, i32* %30, align 4
  %76 = load i32, i32* %31, align 4
  %77 = call i32 @HORIZ_8TAP_4WID_4VECS_FILT(i32 %63, i32 %64, i32 %65, i32 %66, i64 %67, i64 %68, i64 %69, i64 %70, i32 %71, i32 %72, i32 %73, i32 %74, i32 %75, i32 %76)
  %78 = load i32*, i32** %8, align 8
  %79 = load i32, i32* %9, align 4
  %80 = load i32, i32* %11, align 4
  %81 = load i32, i32* %12, align 4
  %82 = load i32, i32* %13, align 4
  %83 = load i32, i32* %14, align 4
  %84 = call i32 @LW4(i32* %78, i32 %79, i32 %80, i32 %81, i32 %82, i32 %83)
  %85 = load i32, i32* %11, align 4
  %86 = load i32, i32* %12, align 4
  %87 = load i32, i32* %13, align 4
  %88 = load i32, i32* %14, align 4
  %89 = load i64, i64* %23, align 8
  %90 = call i32 @INSERT_W4_UB(i32 %85, i32 %86, i32 %87, i32 %88, i64 %89)
  %91 = load i32, i32* %30, align 4
  %92 = load i32, i32* %31, align 4
  %93 = call i32 @SRARI_H2_SH(i32 %91, i32 %92, i32 7)
  %94 = load i32, i32* %30, align 4
  %95 = load i32, i32* %31, align 4
  %96 = call i32 @SAT_SH2_SH(i32 %94, i32 %95, i32 7)
  %97 = load i32, i32* %30, align 4
  %98 = load i32, i32* %31, align 4
  %99 = call i64 @PCKEV_XORI128_UB(i32 %97, i32 %98)
  store i64 %99, i64* %24, align 8
  %100 = load i64, i64* %24, align 8
  %101 = load i64, i64* %23, align 8
  %102 = call i64 @__msa_aver_u_b(i64 %100, i64 %101)
  store i64 %102, i64* %24, align 8
  %103 = load i64, i64* %24, align 8
  %104 = load i32*, i32** %8, align 8
  %105 = load i32, i32* %9, align 4
  %106 = call i32 @ST_W4(i64 %103, i32 0, i32 1, i32 2, i32 3, i32* %104, i32 %105)
  ret void
}

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @HORIZ_8TAP_4WID_4VECS_FILT(i32, i32, i32, i32, i64, i64, i64, i64, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LW4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @INSERT_W4_UB(i32, i32, i32, i32, i64) #1

declare dso_local i32 @SRARI_H2_SH(i32, i32, i32) #1

declare dso_local i32 @SAT_SH2_SH(i32, i32, i32) #1

declare dso_local i64 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i64 @__msa_aver_u_b(i64, i64) #1

declare dso_local i32 @ST_W4(i64, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
